# renderer_lab

./: CMakeLists.txt  image.cpp  image.h  main.cpp
material/gradient-colors/include/: color-provider.h  gradient-color.h  horizontal-gradient.h  radial-gradient.h  solid-color.h  vertical-gradient.h
material/gradient-colors/src/: horizontal-gradient.cpp  radial-gradient.cpp  vertical-gradient.cpp
math/: vector2.cpp  vector2.h  vector3.cpp  vector3.h
math/src/: vector2.cpp  vector3.cpp
renderer/include/: context.h  renderer.h
renderer/src/: renderer.cpp
shapes/include/: background.h  circle.h  drawable.h  line-dda.h  sphere.h  triangle.h  vertex.h
shapes/src/: background.cpp  circle.cpp  drawable.cpp  line-dda.cpp  sphere.cpp  triangle.cpp
